# aiops

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_agent.py
aiops_workflow/: graph.py  nodes.py  state.py
chatops/: agents.py  crew.py  intent_classifier.py  session_manager.py
chatops/tools/: dynamic_data.py  rag_tool.py
config/: settings.py
frontend/: app.py
knowledge_base/: ingest.py  retriever.py
